Version 57 - 08-Aug-2012 - General   - CSS fixes for new toolbar   - Converted load progress bar to use browser-compatible Bootstrap progress bar styles.   - Fixed CSS styles for jQuery UI dialog buttons due to Bootstrap overlaps - Storage   - Fixed an issue with timestamps for minute values under 10

--- a/style.css
+++ b/style.css
@@ -7,9 +7,16 @@ body
 }
 
 .btn a
-	{
-	 text-decoration:none;
-	}
+{
+  text-decoration:none;
+}
+
+.btn-delete
+{
+  width: 22px;
+  height: 22px;
+  padding: 3px;
+}
 
 #tooltip 
 {
@@ -44,6 +51,8 @@ body
   font-family: monospace;
   font-size: 8pt;
   float: left;
+  position:relative;
+  top: -3px;
 }
 
 .StatName
